--- a/src/styles/section/block_details_sidebar.scss
+++ b/src/styles/section/block_details_sidebar.scss
@@ -18,8 +18,8 @@
     gap: 56px;
     grid-template-columns: repeat(12, 1fr);
     grid-template-areas:
-                "b a"
-                "b c";
+      "b a"
+      "b c";
     grid-template-rows: min-content 1fr;
 
     @media (max-width: 1199px) {
@@ -28,9 +28,9 @@
     @media (max-width: 991px) {
       grid-template-columns: 1fr;
       grid-template-areas:
-      "b"
-      "c"
-      "a";
+        "b"
+        "c"
+        "a";
       gap: 32px;
     }
   }
@@ -96,7 +96,6 @@
       grid-column: 1;
       padding-left: 0;
     }
-
   }
 
   .asside__sticky-card {
@@ -131,5 +130,33 @@
 
   .gallery-wrapper figcaption {
     display: none;
+  }
+
+  #project-profile {
+    .logo-project-profile {
+      max-width: 222px;
+    }
+    .tagline {
+      margin-bottom: -18px;
+    }
+    .person-card {
+      margin-top: -18px;
+
+      &:not(:last-child) {
+        padding-bottom: 22px;
+      }
+    }
+
+    .asside {
+      @media (min-width: 991px) {
+        padding-top: 85px;
+      }
+    }
+  }
+  .project-profile-block {
+    margin-top: 22px;
+  }
+  .project-profile-block h3 {
+    margin-bottom: 36px;
   }
 }
